src/human_study/program_33/python_err_msg.txt
File "./seq2parse/human_study/program_33/original.py", line 4
    return sum += i
               ^^
SyntaxError: invalid syntax
